# finnizeclient

./: .env.example  .gitignore  Makefile  README.md  logging.yaml  pyproject.toml  requirements.txt  run.py
example/: delete_signal_example.py  list_of_trade_example.csv  list_of_trade_macd_example_s50_15m_utc+7.csv  upload_signal_example.py
finnizeclient/: config.py  utils.py  workflow.py
finnizeclient/client/: upload_signal.py
src/: utils.py  workflow.py
src/client/: upload_signal.py
tests/integration_test/: test_workflow.py
tests/unit_test/: test_utils.py
